# simulator

./: .clang-format  .gitignore  LICENSE  README.md  coding_standards.md  requirements.txt  vcpkg.json
cpp/: .clang-tidy  CMakeLists.txt
cpp/cmake/: helper_functions.cmake
cpp/libcore/source/: CMakeLists.txt  enum.hpp  log.cpp  log.hpp  simulation.cpp  simulation.hpp  simulation_data.hpp
cpp/libcore/source/agent/: agent.hpp  pedestrian.hpp
cpp/libcore/source/geometry/: area.cpp  area.hpp  coordinate.cpp  coordinate.hpp  helper.cpp  helper.hpp  length_unit.hpp  level.cpp  level.hpp  level_storage.cpp  level_storage.hpp  line_segment.cpp  line_segment.hpp  spatial_vector.cpp  spatial_vector.hpp  special_area.cpp  special_area.hpp  world.cpp  world.hpp  world_builder.cpp  world_builder.hpp  worldbuilder.cpp  worldbuilder.hpp
cpp/libcore/source/geometry/helper/: polygon_helper.cpp  polygon_helper.hpp
cpp/libcore/source/math/: int_pow.hpp
cpp/libcore/source/neighborhood/: grid_2d.hpp  neighborhood_search.cpp  neighborhood_search.hpp
cpp/libcore/source/operational/: operational.hpp  result.hpp  velocity_model.cpp  velocity_model.hpp
cpp/libcore/source/strategic/: result.hpp  strategic.hpp
cpp/libcore/source/tactical/: ShortestPathTactical.cpp  ShortestPathTactical.hpp  compute_grid.cpp  compute_grid.hpp  floodfill.cpp  floodfill.hpp  result.hpp  shortest_path_tactical.cpp  shortest_path_tactical.hpp  tactical.hpp
cpp/libcore/source/util/: identifiable.hpp  jpsexception.cpp  jpsexception.hpp  simulation_clock.hpp  unique_id.hpp  unique_identifiable.hpp  unreachable.hpp  unused.hpp
cpp/libcore/test/: .clang-tidy  CMakeLists.txt  test_dependency_availability.cpp  test_simulation.cpp
cpp/libcore/test/geometry/: test_area.cpp  test_coordinate.cpp  test_helper.cpp  test_length_unit.cpp  test_level.cpp  test_line_segment.cpp  test_spatial_vector.cpp  test_special_area.cpp
cpp/libcore/test/math/: test_int_pow.cpp
cpp/libcore/test/neighborhood/: test_grid_2d.cpp  test_neighborhood_search.cpp
cpp/libcore/test/tactical/: test_ShortestPathTactical.cpp  test_compute_grid.cpp  test_floodfill.cpp  test_shortest_path_tactical.cpp
cpp/libcore/test/util/: test_identifiable.cpp  test_simulation_clock.cpp  test_unique_id.cpp  test_unique_identifiable.cpp
cpp/pycore/source/: .clang-tidy  CMakeLists.txt  jpscore_binding.cpp  logging_binding.cpp  logging_binding.hpp  simulation_binding.cpp  simulation_binding.hpp  simulator_binding.cpp
cpp/pycore/source/agent/: agent_binding.cpp  agent_binding.hpp
cpp/pycore/source/geometry/: area_binding.cpp  area_binding.hpp  coordinate_binding.cpp  coordinate_binding.hpp  length_unit_binding.cpp  length_unit_binding.hpp  level_binding.cpp  level_binding.hpp  level_storage_binding.cpp  level_storage_binding.hpp  line_segment_binding.cpp  line_segment_binding.hpp  spatial_vector_binding.cpp  spatial_vector_binding.hpp  special_area_binding.cpp  special_area_binding.hpp  world_binding.cpp  world_binding.hpp  world_builder_binding.cpp  world_builder_binding.hpp
cpp/pycore/source/util/: jpsexception_binding.cpp  jpsexception_binding.hpp  simulation_clock_binding.cpp  simulation_clock_binding.hpp  unique_id_binding.cpp  unique_id_binding.hpp
cpp/pycore/test/: CMakeLists.txt  example_test.py  import_test.py  logging_test.py
cpp/pycore/test/agent/: agent_test.py
cpp/pycore/test/geometry/: area_test.py  coordinate_test.py  length_unit_test.py  level_test.py  line_segment_test.py  spatial_vector_test.py  special_area_test.py  world_test.py
cpp/pycore/test/util/: simulation_clock_test.py  unique_id_test.py
cpp/scripts/: README.md  setup-dependencies.sh
jps/: jps
jps/jupedsim/: application.py  simulation.py
jps/jupedsim/IO/: trajectorywriter.py  worldparser.py
jps/jupedsim/commands/: README.md  generate_pedestrians.py  run_simulation.py
jps/jupedsim/tests/: test_dummy.py  test_event.py
jps/jupedsim/tests/IO/: test_trajectorywriter.py  test_worldparser.py
jps/jupedsim/tests/util/: conftest.py  test_event.py  test_generator.py  test_simulations_files.py
jps/jupedsim/util/: event.py  file_operations.py  generator.py  loghelper.py  pedestran_area_generator.py  simulation_files.py
scripts/: README.md  check-format-cpp  check-format-py  format-cpp  format-py
